Replace button words with emojis
This is done by using UTF-8 entity numbers for rock, paper, scissors.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div id="container">
-        <button id="rock">Rock</button>
-        <button id="paper">Paper</button>
-        <button id="scissors">Scissors</button>
+        <button id="rock">&#9994</button>
+        <button id="paper">&#9995</button>
+        <button id="scissors">&#9996</button>
     </div>
 </body>
 </html>
