--- a/index.html
+++ b/index.html
@@ -5,12 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
     <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="container">
         <button id="rock">&#9994</button>
         <button id="paper">&#9995</button>
         <button id="scissors">&#9996</button>
+    </div>
+    <div class="score-board">
+        <div class="player-score">
+            <div class="title">Player:</div> 
+        </div>
+        <div class="computer-score">
+            <div class="title">Computer: </div>
+        </div>
     </div>
 </body>
 </html>
