--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="header">
+        <h1 class="header-text">Rock Paper Scissors</h1>
+    </div>
+    
     <div id="container">
         <button id="rock">&#9994</button>
         <button id="paper">&#9995</button>
