--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="header">
         <h1 class="header-text">Rock Paper Scissors</h1>
     </div>
-    
+
     <div id="container">
         <button id="rock">&#9994</button>
         <button id="paper">&#9995</button>
@@ -24,6 +24,12 @@
         <div class="computer-score">
             <div class="title">Computer: </div>
         </div>
+    </div>
+
+    <div class="result-message">
+        <p class="result-message-text">
+            First to 5 wins!
+        </p>
     </div>
 </body>
 </html>
