Refactor old code in script.js and edit index.html

--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
         <button id="paper">&#9995</button>
         <button id="scissors">&#9996</button>
     </div>
-    <div class="score-board">
-        <div class="player-score">
+    <div class="scoreboard">
+        <div class="player-scoreboard">
             <div class="title">Player:</div> 
+            <p id="player-score">0</p>
         </div>
-        <div class="computer-score">
+        <div class="computer-scoreboard">
             <div class="title">Computer: </div>
+            <p id="computer-score">0</p>
         </div>
     </div>
 
