Create endgame modal

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     </div>
 
     <div id="container">
-        <button id="rock">&#9994</button>
-        <button id="paper">&#9995</button>
-        <button id="scissors">&#9996</button>
+        <button class="btn" id="rock">&#9994</button>
+        <button class="btn" id="paper">&#9995</button>
+        <button class="btn" id="scissors">&#9996</button>
     </div>
     <div class="scoreboard">
         <div class="player-scoreboard">
@@ -33,5 +33,9 @@
             First to 5 wins!
         </p>
     </div>
+    <dialog class="modal" id="modal">
+        <h2 class="modal-message"></h2>
+        <button class="restart" id="restart">Restart</button>
+    </dialog>
 </body>
 </html>
