--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Rock Paper Scissors</title>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@500;800&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="header">
